# RESTAPI

./: .env_example  .gitignore  README.md  alembic.ini  docker-compose.yaml  fill_db.py  pyproject.toml
src/api/: lifespan.py  main.py
src/api/routers/: organization_router.py
src/common/: fill_db.py  settings.py
src/common/converters/: model_converters.py  query_converters.py
src/domain/entities/: buildings.py  composer.py  organizations.py  phones.py
src/domain/schemas/: activity.py  building.py  organization.py  phone.py
src/infra/alembic/: env.py
src/infra/alembic/versions/: 8e26f76a650a_initial_migration.py  9fbea3ec0163_initial_migration.py
src/infra/db/: db.py
src/infra/models/: base.py  models.py
src/infra/repos/: organization_repo.py
src/logic/repo_services/: organization_service.py
